KSAP-0.1.2 milestone - refactored ks-ap config, built ks-ap-framework, repeating ks-ap-impl tests in progress
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-ap/trunk@41257 0ac02d80-fb3f-11dc-a574-c57244a850eb