@@ -1,34 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>ks-ap-impl</artifactId>
-    <name>KSAP IMPL</name>
-    <description>KS Academic Planning Implementation</description>
+    <artifactId>ks-ap-framework</artifactId>
+    <name>KSAP Framework</name>
+    <description>KS Academic Planning Framework</description>
     <parent>
         <groupId>org.kuali.student.ap</groupId>
         <artifactId>ks-ap</artifactId>
         <version>0.1.1-KSAP-SNAPSHOT</version>
     </parent>
 
-    <!-- For Restlet dependency
-    <repositories>
-        <repository>
-            <id>maven-restlet</id>
-            <name>Public online Restlet repository</name>
-            <url>http://maven.restlet.org</url>
-        </repository>
-    </repositories>
--->
-
     <dependencies>
         <dependency>
             <groupId>org.kuali.student.api</groupId>
-            <artifactId>ks-core-api</artifactId>
+            <artifactId>ks-common-api</artifactId>
             <version>${ks.api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.kuali.student.api</groupId>
-            <artifactId>ks-common-api</artifactId>
+            <artifactId>ks-core-api</artifactId>
             <version>${ks.api.version}</version>
         </dependency>
         <dependency>
@@ -47,18 +37,13 @@
             <version>${ks.ap.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.kuali.student.core</groupId>
-            <artifactId>ks-common-impl</artifactId>
-            <version>${ks.core.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.kuali.student.ap</groupId>
-            <artifactId>ks-ap-framework</artifactId>
-            <version>${ks.ap.version}</version>
-        </dependency>
-        <dependency>
         		<groupId>org.kuali.rice</groupId>
         		<artifactId>rice-krad-app-framework</artifactId>
+        		<version>${kuali.rice.version}</version>
+       	</dependency>
+        <dependency>
+        		<groupId>org.kuali.rice</groupId>
+        		<artifactId>rice-krad-web-framework</artifactId>
         		<version>${kuali.rice.version}</version>
        	</dependency>
 				<!-- test dependencies -->
@@ -76,10 +61,59 @@
         </dependency>
         <dependency>
             <groupId>org.kuali.student.core</groupId>
+            <artifactId>ks-common-impl</artifactId>
+            <version>${ks.core.version}</version>
+						<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.core</groupId>
+            <artifactId>ks-common-ui</artifactId>
+            <version>${ks.core.version}</version>
+						<scope>test</scope>
+            <exclusions>
+              <exclusion>
+                <groupId>com.google.gwt</groupId>
+                <artifactId>gwt-dev</artifactId>
+              </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.core</groupId>
             <artifactId>ks-core-impl</artifactId>
             <version>${ks.core.version}</version>
 						<scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.kuali.student.core</groupId>
+            <artifactId>ks-core-ui</artifactId>
+            <version>${ks.core.version}</version>
+						<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.lum</groupId>
+            <artifactId>ks-lum-impl</artifactId>
+            <version>${ks.lum.version}</version>
+						<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.lum</groupId>
+            <artifactId>ks-lum-ui</artifactId>
+            <version>${ks.lum.version}</version>
+						<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.enroll</groupId>
+            <artifactId>ks-enroll-impl</artifactId>
+            <version>${ks.enroll.version}</version>
+						<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kuali.student.enroll</groupId>
+            <artifactId>ks-enroll-ui</artifactId>
+            <version>${ks.enroll.version}</version>
+						<scope>test</scope>
+        </dependency>
+ 
         <dependency>
         		<groupId>org.kuali.rice</groupId>
         		<artifactId>rice-impl</artifactId>
@@ -104,7 +138,7 @@
                         -->
                 <configuration>
                     <forkMode>always</forkMode>
-                    <argLine>-Xms256m -Xmx512m</argLine>
+                    <argLine>-XX:MaxPermSize=128m -Xms256m -Xmx512m</argLine>
                 </configuration>
             </plugin>
         </plugins>
